--- a/src/app/components/items-list/items-list.component.html
+++ b/src/app/components/items-list/items-list.component.html
@@ -1,10 +1,21 @@
 <div *ngIf="itemsList.length">
+    <mat-paginator *ngIf="totalPages > 1"
+        [length]="itemsTotal"
+        [pageIndex]="pageIndex"
+        [pageSize]="pageSize"
+        [hidePageSize]="true"
+        (page)="handlePageEvent($event)"
+        aria-label="Select page">
+    </mat-paginator>   
     <mat-grid-list cols="3" rowHeight="2:1" gutterSize="12">
         <mat-grid-tile *ngFor="let item of itemsList" (click)="navigateToFn(item.id)">
             <div class="logo-container">
                 <img class="logo" [src]="'http://localhost:3000/images/'+imgPath+'/'+item.main_img">
             </div>
-            <mat-grid-tile-footer>{{item.name}}</mat-grid-tile-footer>
+            <mat-grid-tile-footer>{{item.name}}
+                <span *ngIf="item.defunct_year">&nbsp;&dagger;</span>
+                <span *ngIf="item.release_date">&nbsp;({{getYear(item.release_date)}})</span>
+            </mat-grid-tile-footer>
         </mat-grid-tile>
-    </mat-grid-list>
+    </mat-grid-list>     
 </div>
