--- a/src/app/pages/characters/character-detail/character-detail.page.html
+++ b/src/app/pages/characters/character-detail/character-detail.page.html
@@ -26,7 +26,7 @@
             </div>
             <div class="character-info">
                 <div class="info-entry">
-                    <div class="label-info">Año de creación:</div>
+                    <div class="label-info">Año de primera aparición:</div>
                     <div class="value-info">{{character.creation_year}}</div>
                 </div>
                 <div class="info-entry" *ngIf="character.creators && character.creators.length">
