--- a/src/app/pages/games/game-form/game-form.component.html
+++ b/src/app/pages/games/game-form/game-form.component.html
@@ -5,7 +5,7 @@
             <input id="name" type="text" formControlName="name" matInput>
         </mat-form-field>
         <mat-form-field>
-            <mat-label>Fecha de lanzamiento (España)</mat-label>
+            <mat-label>Fecha de lanzamiento</mat-label>
             <input id="release_date" type="date" formControlName="release_date" matInput>
         </mat-form-field>
         <mat-form-field>
