--- a/src/app/pages/themes/themes.page.html
+++ b/src/app/pages/themes/themes.page.html
@@ -1,8 +1,10 @@
 <div class="common-content">
-    <vgdb-common-list-header (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event)"></vgdb-common-list-header>
+    <vgdb-common-list-header (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)"></vgdb-common-list-header>
     <div *ngIf="!!themes.length">
-        <vgdb-items-list [itemsList]="themes"
-                          navigateTo="themes" imgPath="themes">
+        <vgdb-items-list [itemsList]="themes"                         
+                         [itemsTotal]="itemsTotal"
+                         (onPageChange)="pageChange($event)"
+                         navigateTo="themes" imgPath="themes">
         </vgdb-items-list>
     </div>
     <div *ngIf="!themes.length">
