--- a/src/app/components/items-list/items-list.component.scss
+++ b/src/app/components/items-list/items-list.component.scss
@@ -4,7 +4,10 @@
     border: 1px solid variables.$grey-border;
     cursor: pointer;
     font-family: "pixela";
+    .logo-container {
+        width: 100%;
+    }
     .logo {
-        max-width: 100%;
+        width: 100%;
     }
 }
