--- a/src/app/pages/franchises/franchise-form/franchise-form.component.html
+++ b/src/app/pages/franchises/franchise-form/franchise-form.component.html
@@ -20,6 +20,8 @@
             <mat-label>Wikipedia</mat-label>
             <input id="wikipedia" type="text" formControlName="wikipedia" matInput>
         </mat-form-field>
+
+        <mat-checkbox formControlName="is_main">Franquicia clave</mat-checkbox>
         
         <div class="form-button">
             <button type="submit" [disabled]="!franchiseForm.valid" *ngIf="!data" mat-stroked-button>Crear</button>
