--- a/src/app/pages/games/game-detail/game-detail.page.html
+++ b/src/app/pages/games/game-detail/game-detail.page.html
@@ -25,7 +25,7 @@
     </div>
     <div class="platforms-container" *ngIf="game.platforms && game.platforms.length">
         <div class="platforms-area">
-            <div *ngFor="let platform of game.platforms" class="platform-tag megadrive" [matTooltip]="platform.name" [routerLink]="'/platforms/'+platform!.id">
+            <div *ngFor="let platform of game.platforms" [class]="'platform-tag ' + platform.name" [matTooltip]="platform.name" [routerLink]="'/platforms/'+platform!.id">
                 <img class="platform-mini-logo" [src]="'http://localhost:3000/images/platforms/'+platform.mini_logo"/>
             </div>
         </div>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="game-info">
                     <div class="info-entry">
-                        <div class="label-info">Fecha de salida (España):</div>
+                        <div class="label-info">Fecha de salida:</div>
                         <div class="value-info">{{game.release_date | date: 'dd/MM/yyyy'}}</div>
                     </div>
                     <div class="info-entry" *ngIf="companiesDev && companiesDev.length">
@@ -71,7 +71,7 @@
 
             <div class="game-additional">
                 <div class="main-row">
-                    <div class="score">{{game.score}}</div>
+                    <div class="score" [style]="scoreStyle">{{game.score ? game.score : '-'}}</div>
                     <div *ngIf="mainAwards && mainAwards.length">
                         <div *ngFor="let award of mainAwards" class="award-color" [matTooltip]="award.Game_Award!.year + ' ' +award.award!.name + ' ' + award.name + ' ' + award.Game_Award!.result">
                             <div class="award-background">
@@ -106,7 +106,7 @@
                 </div>
                 <div class="game-price-row">
                     <div class="game-price-container">
-                        <div class="game-price-value">{{game.price}} €</div>
+                        <div class="game-price-value">{{ game.price ? game.price : '-'}} €</div>
                         <div class="game-price-format">{{game.format}}</div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
         </mat-expansion-panel>
 
         <mat-expansion-panel *ngIf="game.awards && game.awards.length">
-            <mat-expansion-panel-header class="divider"[style]="backgroundStyle">
+            <mat-expansion-panel-header class="divider" [style]="backgroundStyle">
                 <mat-panel-title>
                 Premios
                 </mat-panel-title>
