--- a/src/app/pages/platforms/platform-form/platform-form.component.html
+++ b/src/app/pages/platforms/platform-form/platform-form.component.html
@@ -48,6 +48,7 @@
             <mat-label>Wikipedia</mat-label>
             <input id="wikipedia" type="text" formControlName="wikipedia" matInput>
         </mat-form-field>
+        <mat-checkbox formControlName="is_main">Plataforma clave</mat-checkbox>
         
         <div class="form-button">
             <button type="submit" [disabled]="!platformForm.valid" *ngIf="!data" mat-stroked-button>Crear</button>
