--- a/src/app/pages/games/game-detail/game-detail.page.scss
+++ b/src/app/pages/games/game-detail/game-detail.page.scss
@@ -36,7 +36,7 @@
 
             }
             
-            &.NES, &.Master {
+            &.NES, &.Master, &.Disk {
                 background-color: white;
             }
         }
