--- a/src/app/pages/platforms/platform-form/platform-form.component.html
+++ b/src/app/pages/platforms/platform-form/platform-form.component.html
@@ -34,6 +34,7 @@
               <mat-option value="desktop">Sobremesa</mat-option>
               <mat-option value="portable">Portátil</mat-option>
               <mat-option value="hybrid">Híbrida</mat-option>
+              <mat-option value="peripheral">Periférico</mat-option>
             </mat-select>
           </mat-form-field>
         <mat-form-field>
