--- a/src/app/pages/games/game-detail/game-detail.page.html
+++ b/src/app/pages/games/game-detail/game-detail.page.html
@@ -72,6 +72,7 @@
                 </div>
             </div>
 
+
             <div class="game-additional">
                 <div class="main-row">
                     <div class="score" [style]="scoreStyle">{{game.score ? game.score : '-'}}</div>
@@ -114,6 +115,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="info-entry dlc" *ngIf="game.dlc">
+            <div class="label-info">Expansiones/DLC:</div>
+            <div class="value-info" style="white-space: pre-line">{{game.dlc}}</div>
         </div>
 
         <mat-expansion-panel *ngIf="game.franchise"  [expanded]="true">
