--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,7 @@ body {
         margin-right: auto;
 
         display: flex;
-        height: 180px;
+        min-height: 180px;
         color: white;
         background-color: transparent;
         padding: 10px 20px;
